reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_146_col_5.log

*** crates/tracewake-core/src/events/apply.rs:146:5: replace apply_event_with_capability -> Result<ApplyOutcome, ApplyError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace apply_event_with_capability -> Result<ApplyOutcome, ApplyError> with Ok(Default::default())
@@ -138,67 +138,17 @@
     apply_event_with_capability(state, event, capability)
 }
 
 fn apply_event_with_capability(
     state: &mut PhysicalState,
     event: &EventEnvelope,
     _capability: WorldMutationCapability,
 ) -> Result<ApplyOutcome, ApplyError> {
-    if !event.has_supported_schema_version() {
-        return Err(ApplyError::UnsupportedSchemaVersion(
-            event.event_schema_version.as_str().to_string(),
-        ));
-    }
-
-    if event.stream != event.event_type.stream() {
-        return Err(ApplyError::EventKindStreamMismatch);
-    }
-
-    if event.stream != EventStream::World {
-        return Ok(ApplyOutcome::NonWorldNoOp);
-    }
-
-    if event.event_type.requires_cause() && event.causes.is_empty() {
-        return Err(ApplyError::MissingCause);
-    }
-
-    let payload = payload_map(&event.payload);
-    match event.event_type {
-        EventKind::ActorMoved => apply_actor_moved(state, &payload).map(|_| ApplyOutcome::Applied),
-        EventKind::DoorOpened => {
-            apply_door_open_state(state, &payload, false, true).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::DoorClosed => {
-            apply_door_open_state(state, &payload, true, false).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::ContainerOpened => {
-            apply_container_open_state(state, &payload, false, true).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::ContainerClosed => {
-            apply_container_open_state(state, &payload, true, false).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::ItemTakenFromPlace => {
-            apply_item_taken_from_place(state, &payload).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::ItemRemovedFromContainer => {
-            apply_item_removed_from_container(state, &payload).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::ItemPlacedInPlace => {
-            apply_item_placed_in_place(state, &payload).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::ItemPlacedInContainer => {
-            apply_item_placed_in_container(state, &payload).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::FoodConsumed => {
-            apply_food_consumed(state, &payload).map(|_| ApplyOutcome::Applied)
-        }
-        EventKind::ActorWaited | EventKind::TimeAdvanced => Ok(ApplyOutcome::WorldNoOp),
-        other => Err(ApplyError::UnhandledWorldEventKind(other)),
-    }
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn apply_epistemic_event(
     projection: &mut EpistemicProjection,
     event: &EventEnvelope,
 ) -> Result<ApplyOutcome, EpistemicApplyError> {
     if !event.has_supported_schema_version() {
         return Err(EpistemicApplyError::UnsupportedEventSchemaVersion(


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ApplyOutcome: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:146:8
    |
146 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ApplyOutcome`
   --> crates/tracewake-core/src/events/apply.rs:24:1
    |
 24 | pub enum ApplyOutcome {
    | ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `apply::ApplyOutcome: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:146:8
    |
146 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `apply::ApplyOutcome`
   --> crates/tracewake-core/src/events/apply.rs:24:1
    |
 24 | pub enum ApplyOutcome {
    | ^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
